2007-06-29  Adele Peterson  <adele@apple.com>

        Reviewed by Ada and Kevin McCullough.

        Test for <rdar://problem/5301322> REGRESSION: Select All selects the whole page when used in readonly textareas

        * fast/forms/input-readonly-select-all-expected.checksum: Added.
        * fast/forms/input-readonly-select-all-expected.png: Added.
        * fast/forms/input-readonly-select-all-expected.txt: Added.
        * fast/forms/input-readonly-select-all.html: Added.
        * fast/forms/textarea-readonly-select-all-expected.checksum: Added.
        * fast/forms/textarea-readonly-select-all-expected.png: Added.
        * fast/forms/textarea-readonly-select-all-expected.txt: Added.
        * fast/forms/textarea-readonly-select-all.html: Added.

2007-06-28  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Beth.

        - test for http://bugs.webkit.org/show_bug.cgi?id=14118
          ASSERTION FAILED: !needsLayout() seen again

        * fast/dynamic/recursive-layout-expected.txt: Added.
        * fast/dynamic/recursive-layout.html: Added.

2007-06-28  Sam Weinig  <sam@webkit.org>

        Rubberstamped by Adam Roben.

        Roll out r23861.  It caused the buildbot to fail on intel.

        * http/tests/navigation/goBack-blank-tab-page-expected.txt: Removed.
        * http/tests/navigation/goBack-blank-tab-page.html: Removed.
        * http/tests/navigation/resources/before-go-back.html: Removed.
        * http/tests/navigation/resources/will-go-back.html: Removed.

2007-06-28  Maxime Britto  <mbritto@pleyo.com>

        Reviewed by Geoff.

        Tests for http://bugs.webkit.org/show_bug.cgi?id=13038
        ASSERTION FAILED: item->target().isEmpty() || m_mainFrame->tree()->find(item->target()) == m_mainFrame

        Although the test works with the script, it can't detect an eventually
        error automatically since the first link must be opened in a new tab with