@@ -1,3 +1,14 @@
+2007-06-29  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Oliver Hunt.
+
+        Fixed <rdar://problem/4962298> REGRESSION: Synchronous XHR for missing 
+        local file throws exception -- breaks Wikipedia widget
+
+        * WebCore.xcodeproj/project.pbxproj:
+        * xml/xmlhttprequest.cpp:
+        (WebCore::XMLHttpRequest::send): Don't throw exceptions for local files.
+
 2007-06-29  Ada Chan  <adachan@apple.com>
 
         Reviewed by Adam.
